# 01_data_engineer

03_sql_bdd_laplace/: .gitignore  Diaz_Joaquim_2_support.pptx  README.md  notebook_preparation.ipynb  pyproject.toml
03_sql_bdd_laplace/requete/: 1.sql  10.sql  11.sql  12.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  count.sql  create_tables.sql  delete_tables.sql  load_data.sql
04_auditez_un_environnement_de_donnees/: .gitignore  README.md  notebook.ipynb  notebook_preparation.ipynb  prototype_transaction.ipynb  pyproject.toml  verification_logs.py
04_auditez_un_environnement_de_donnees/documents/: Rapport+d'audit.docx
04_auditez_un_environnement_de_donnees/img_md/: rapport_audit.md
04_auditez_un_environnement_de_donnees/sql/: ca_15.sql  ca_employe.sql  champs_prix.sql  correction_date_prix.sql  correction_employe.sql  correction_procedure_transac.sql  correction_prototype_create_tables.sql  correction_transaction_log.sql  correction_transaction_prototype.sql  count_actions.sql  count_tables.sql  create_tables.sql  date_inscription.sql  delete_tables.sql  incoherence_date_t3839.sql  load_logs.sql  load_tables.sql  main_prototype.sql  prototype_count_all.sql  prototype_create.sql  prototype_load.sql  prototype_procedure.sql  prototype_trigger.sql  requete_ca.sql  test.sql  top10_client.sql  value_counts.sql
05_NoSQL/: .gitignore  data_descritpion.md  (+7 more)
06_batiment_consommation/: .gitignore  README.md  notebook.ipynb  notebook_model.ipynb  notebook_nettoyage.ipynb  notebook_v2.ipynb  prez.pptx  pyproject.toml  script_nettoyage.py  service.py  template_modelistation_supervisee.ipynb
(+6 files in other folders)
