[tool.poetry]
name = "p3-de"
version = "0.1.0"
description = "Exploration et préparation des données pour le p3 de"
authors = ["joaquim.diaz <joaquim.diaz@orange.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
polars = "^1.9.0"
fastexcel = "^0.12.0"
unidecode = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
