[tool.poetry]
name = "06-batiment-consommation"
version = "0.1.0"
description = ""
authors = ["Joaquim <diazjoaquim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "<3.7"
seaborn = "^0.13.2"
scikit-learn = "^1.6.0"
ipykernel = "^6.29.5"
numpy = "<2"
pandas = "^2.2.3"
polars = "^1.17.1"
missingno = "^0.5.2"
bentoml = "^1.3.20"


[[tool.poetry.source]]
name = "orange"
url = "https://repos.tech.orange/artifactory/api/pypi/pythonproxy/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
